--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
            >Github</a
          >
          and website hosted on
-         <a href="#" target="_blank">Netlify</a>
+         <a href="" target="_blank">Netlify</a>
        </footer>
      </div>
      <script src="index.js"></script>
