--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
          This project was coded by
          <a href="#" target="_blank">Laila Rahman</a
          >, is open-sourced on
-         <a href="#" target="_blank"
+         <a href="https://github.com/LailaRahman/final-weather-app" target="_blank"
            >Github</a
          >
          and website hosted on
-         <a href="" target="_blank">Netlify</a>
+         <a href="https://final-project-shecodes-plus.netlify.app/" target="_blank">Netlify</a>
        </footer>
      </div>
      <script src="index.js"></script>
